# client-server-cpp

./: README.md
client/: CMakeLists.txt
client/src/: client.cpp  main.cpp  socket.cpp  socket.h
lib/: CMakeLists.txt
lib/include/: socket.h
lib/src/: socket.cpp
server/: CMakeLists.txt
server/src/: main.cpp  server.cpp
